<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2196F3"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/loginText"
        android:layout_width="92dp"
        android:layout_height="48dp"
        android:layout_marginStart="159dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="160dp"
        android:background="#2196F3"
        android:text="@string/loginTxt"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <AutoCompleteTextView
        android:id="@+id/roomText"
        android:layout_width="163dp"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="184dp"
        android:text="@string/roomTxt"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/joinBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameText" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/userName"
        android:layout_width="115dp"
        android:layout_height="27dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="124dp"
        android:layout_marginBottom="10dp"
        android:text="@string/userName"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/room"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginText" />

    <TextView
        android:id="@+id/room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="424dp"
        android:text="@string/room"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName" />

    <AutoCompleteTextView
        android:id="@+id/userNameText"
        android:layout_width="164dp"
        android:layout_height="47dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="1dp"
        android:layout_weight="1"
        android:text="@string/userNameTxt"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/roomText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginText" />

    <Button
        android:id="@+id/joinBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="179dp"
        android:onClick="handleJoinClick"
        android:text="@string/joinBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>